--- a/index.html
+++ b/index.html
@@ -5848,7 +5848,7 @@ function viewReports(){
       +'<tr><th>Total Vehicle Purchases (purchased this month)</th><td class="right">'+fmtMoney(purchases)+'</td></tr>'
       +'<tr><th>Vehicle Expenses (this month)</th><td class="right">'+fmtMoney(vehExp)+'</td></tr>'
       +'<tr><th>Showroom Expenses '+(cover?'(covered by profit, shown as £0)':'')+'</th><td class="right">'+fmtMoney(showExpShown)+'</td></tr>'
-      +'<tr><th>Net Profit/Loss</th><td class="right">'+fmtMoney(netMonthClose)+'</td></tr>'
+      +'<tr><th>Net Profit/Loss (Month Close method)</th><td class="right"><b>'+fmtMoney(netMonthClose)+'</b></td></tr>'
       +'</tbody></table>';
   };
 
